package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "jwt_signature_keysets",
    srcs = [
        "jwt_signature_private_keyset.json",
        "jwt_signature_public_keyset.json",
    ],
)

cc_binary(
    name = "jwt_sign",
    srcs = ["jwt_sign.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/jwt:jwt_public_key_sign",
        "@tink_cc//tink/jwt:jwt_signature_config",
        "@tink_cc//tink/jwt:raw_jwt",
    ],
)

cc_binary(
    name = "jwt_verify",
    srcs = ["jwt_verify.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/jwt:jwk_set_converter",
        "@tink_cc//tink/jwt:jwt_public_key_verify",
        "@tink_cc//tink/jwt:jwt_signature_config",
        "@tink_cc//tink/jwt:jwt_validator",
    ],
)

cc_binary(
    name = "jwt_generate_public_jwk_set",
    srcs = ["jwt_generate_public_jwk_set.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/jwt:jwk_set_converter",
        "@tink_cc//tink/jwt:jwt_signature_config",
    ],
)

sh_test(
    name = "jwt_signature_cli_test",
    size = "small",
    srcs = ["jwt_signature_cli_test.sh"],
    args = [
        "$(rootpath :jwt_sign)",
        "$(rootpath :jwt_generate_public_jwk_set)",
        "$(rootpath :jwt_verify)",
        "$(rootpaths :jwt_signature_keysets)",
    ],
    data = [
        ":jwt_generate_public_jwk_set",
        ":jwt_sign",
        ":jwt_signature_keysets",
        ":jwt_verify",
    ],
)
