load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "key_derivation_cli",
    srcs = ["key_derivation_cli.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/keyderivation:key_derivation_config",
        "@tink_cc//tink/keyderivation:keyset_deriver",
    ],
)

sh_test(
    name = "key_derivation_cli_test",
    size = "small",
    srcs = ["key_derivation_cli_test.sh"],
    args = [
        "$(rootpath :key_derivation_cli)",
        "$(rootpaths :keyset.json)",
    ],
    data = [
        ":key_derivation_cli",
        ":keyset.json",
    ],
)
