load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "mac_test_keyset",
    srcs = ["mac_test_keyset.json"],
)

cc_binary(
    name = "mac_cli",
    srcs = ["mac_cli.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:mac",
        "@tink_cc//tink/mac:mac_config",
    ],
)

sh_test(
    name = "mac_cli_test",
    size = "small",
    srcs = ["mac_cli_test.sh"],
    args = [
        "$(rootpath :mac_cli)",
        "$(rootpath :mac_test_keyset)",
    ],
    data = [
        ":mac_cli",
        ":mac_test_keyset",
    ],
)
