package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "@com_google_absl//absl/memory",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:json_keyset_reader",
        "@tink_cc//tink:json_keyset_writer",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink:keyset_writer",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
    ],
)
