package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "aead_wrapper",
    srcs = ["aead_wrapper.cc"],
    hdrs = ["aead_wrapper.h"],
    include_prefix = "tink/aead",
    deps = [
        "//tink:aead",
        "//tink:crypto_format",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//tink/internal:monitoring_util",
        "//tink/internal:registry_impl",
        "//tink/internal:util",
        "//tink/monitoring",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "cord_aead_wrapper",
    srcs = ["cord_aead_wrapper.cc"],
    hdrs = ["cord_aead_wrapper.h"],
    include_prefix = "tink/aead",
    deps = [
        ":cord_aead",
        "//tink:crypto_format",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_library(
    name = "cord_aead",
    hdrs = ["cord_aead.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/util:statusor",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_library(
    name = "aead_config",
    srcs = ["aead_config.cc"],
    hdrs = ["aead_config.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        ":aead_wrapper",
        ":aes_ctr_hmac_aead_key_manager",
        ":aes_eax_key_manager",
        ":aes_gcm_key_manager",
        ":aes_gcm_proto_serialization",
        ":aes_gcm_siv_key_manager",
        ":kms_aead_key_manager",
        ":kms_envelope_aead_key_manager",
        ":xchacha20_poly1305_key_manager",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/mac:mac_config",
        "//proto:config_cc_proto",
        "//tink/util:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "aead_factory",
    srcs = ["aead_factory.cc"],
    hdrs = ["aead_factory.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_wrapper",
        "//tink:aead",
        "//tink:key_manager",
        "//tink:keyset_handle",
        "//tink:registry",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
    ],
)

cc_library(
    name = "aead_key_templates",
    srcs = ["aead_key_templates.cc"],
    hdrs = ["aead_key_templates.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:aes_ctr_cc_proto",
        "//proto:aes_ctr_hmac_aead_cc_proto",
        "//proto:aes_eax_cc_proto",
        "//proto:aes_gcm_cc_proto",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:common_cc_proto",
        "//proto:hmac_cc_proto",
        "//proto:kms_envelope_cc_proto",
        "//proto:tink_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_eax_key_manager",
    hdrs = ["aes_eax_key_manager.h"],
    include_prefix = "tink/aead",
    deps = [
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//proto:aes_eax_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aes_eax_boringssl",
        "//tink/subtle:random",
        "//tink/util:constants",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_gcm_key_manager",
    hdrs = ["aes_gcm_key_manager.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        ":cord_aead",
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:input_stream",
        "//tink/aead/internal:cord_aes_gcm_boringssl",
        "//tink/internal:fips_utils",
        "//proto:aes_gcm_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aes_gcm_boringssl",
        "//tink/subtle:random",
        "//tink/util:constants",
        "//tink/util:input_stream_util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_gcm_siv_key_manager",
    hdrs = ["aes_gcm_siv_key_manager.h"],
    include_prefix = "tink/aead",
    deps = [
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aes_gcm_siv_boringssl",
        "//tink/subtle:random",
        "//tink/util:constants",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_ctr_hmac_aead_key_manager",
    srcs = ["aes_ctr_hmac_aead_key_manager.cc"],
    hdrs = ["aes_ctr_hmac_aead_key_manager.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:mac",
        "//tink/internal:fips_utils",
        "//tink/mac:hmac_key_manager",
        "//proto:aes_ctr_cc_proto",
        "//proto:aes_ctr_hmac_aead_cc_proto",
        "//proto:common_cc_proto",
        "//proto:hmac_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aes_ctr_boringssl",
        "//tink/subtle:encrypt_then_authenticate",
        "//tink/subtle:ind_cpa_cipher",
        "//tink/subtle:random",
        "//tink/util:constants",
        "//tink/util:enums",
        "//tink/util:input_stream_util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "xchacha20_poly1305_key_manager",
    hdrs = ["xchacha20_poly1305_key_manager.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:input_stream",
        "//proto:tink_cc_proto",
        "//proto:xchacha20_poly1305_cc_proto",
        "//tink/subtle",
        "//tink/subtle:xchacha20_poly1305_boringssl",
        "//tink/util:constants",
        "//tink/util:input_stream_util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "kms_aead_key_manager",
    hdrs = ["kms_aead_key_manager.h"],
    include_prefix = "tink/aead",
    deps = [
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:kms_client",
        "//tink:kms_clients",
        "//proto:kms_aead_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:constants",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "kms_envelope_aead",
    srcs = ["kms_envelope_aead.cc"],
    hdrs = ["kms_envelope_aead.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:aead",
        "//tink:registry",
        "//tink/aead/internal:aead_util",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "kms_envelope_aead_key_manager",
    srcs = ["kms_envelope_aead_key_manager.cc"],
    hdrs = ["kms_envelope_aead_key_manager.h"],
    include_prefix = "tink/aead",
    deps = [
        ":kms_envelope_aead",
        "//tink:aead",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:kms_client",
        "//tink:kms_clients",
        "//tink/aead/internal:aead_util",
        "//tink/internal:fips_utils",
        "//proto:kms_envelope_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:constants",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "mock_aead",
    testonly = 1,
    hdrs = ["mock_aead.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:aead",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "failing_aead",
    testonly = 1,
    srcs = ["failing_aead.cc"],
    hdrs = ["failing_aead.h"],
    include_prefix = "tink/aead",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:aead",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aead_parameters",
    hdrs = ["aead_parameters.h"],
    include_prefix = "tink/aead",
    deps = ["//tink:parameters"],
)

cc_library(
    name = "aead_key",
    hdrs = ["aead_key.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_parameters",
        "//tink:key",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_gcm_parameters",
    srcs = ["aes_gcm_parameters.cc"],
    hdrs = ["aes_gcm_parameters.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_parameters",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_gcm_key",
    srcs = ["aes_gcm_key.cc"],
    hdrs = ["aes_gcm_key.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_key",
        ":aes_gcm_parameters",
        "//tink:partial_key_access_token",
        "//tink:restricted_data",
        "//tink/subtle:subtle_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "aes_gcm_proto_serialization",
    srcs = ["aes_gcm_proto_serialization.cc"],
    hdrs = ["aes_gcm_proto_serialization.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aes_gcm_key",
        ":aes_gcm_parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//proto:aes_gcm_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "aes_gcm_siv_parameters",
    srcs = ["aes_gcm_siv_parameters.cc"],
    hdrs = ["aes_gcm_siv_parameters.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_parameters",
        "//tink:parameters",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_gcm_siv_key",
    srcs = ["aes_gcm_siv_key.cc"],
    hdrs = ["aes_gcm_siv_key.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aead_key",
        ":aes_gcm_siv_parameters",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_data",
        "//tink/subtle:subtle_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "aes_gcm_siv_proto_serialization",
    srcs = ["aes_gcm_siv_proto_serialization.cc"],
    hdrs = ["aes_gcm_siv_proto_serialization.h"],
    include_prefix = "tink/aead",
    deps = [
        ":aes_gcm_siv_parameters",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_parameters_serialization",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
    ],
)

# tests

cc_test(
    name = "aead_wrapper_test",
    size = "small",
    srcs = ["aead_wrapper_test.cc"],
    deps = [
        ":aead_wrapper",
        ":mock_aead",
        "//tink:aead",
        "//tink:crypto_format",
        "//tink:primitive_set",
        "//tink:registry",
        "//tink/internal:registry_impl",
        "//tink/monitoring",
        "//tink/monitoring:monitoring_client_mocks",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aead_config_test",
    size = "small",
    srcs = ["aead_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":aead_config",
        ":aead_key_templates",
        ":aes_gcm_key",
        ":aes_gcm_key_manager",
        ":aes_gcm_parameters",
        "//tink:aead",
        "//tink:insecure_secret_key_access",
        "//tink:keyset_handle",
        "//tink:partial_key_access",
        "//tink:primitive_set",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/internal:fips_utils",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aead_factory_test",
    size = "small",
    srcs = ["aead_factory_test.cc"],
    deps = [
        ":aead_config",
        ":aead_factory",
        ":aes_gcm_key_manager",
        "//tink:aead",
        "//tink:crypto_format",
        "//tink:keyset_handle",
        "//tink/internal:key_info",
        "//proto:aes_gcm_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_keyset_handle",
        "//tink/util:test_util",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aead_key_templates_test",
    size = "small",
    srcs = ["aead_key_templates_test.cc"],
    deps = [
        ":aead_config",
        ":aead_key_templates",
        ":aes_ctr_hmac_aead_key_manager",
        ":aes_eax_key_manager",
        ":aes_gcm_key_manager",
        ":aes_gcm_siv_key_manager",
        ":kms_envelope_aead_key_manager",
        ":xchacha20_poly1305_key_manager",
        "//tink:aead",
        "//tink:core/key_manager_impl",
        "//tink:key_manager",
        "//tink:keyset_handle",
        "//proto:aes_ctr_cc_proto",
        "//proto:aes_ctr_hmac_aead_cc_proto",
        "//proto:aes_eax_cc_proto",
        "//proto:aes_gcm_cc_proto",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:common_cc_proto",
        "//proto:hmac_cc_proto",
        "//proto:kms_envelope_cc_proto",
        "//proto:tink_cc_proto",
        "//proto:xchacha20_poly1305_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/util:fake_kms_client",
        "//tink/util:status",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_eax_key_manager_test",
    size = "small",
    srcs = ["aes_eax_key_manager_test.cc"],
    deps = [
        ":aes_eax_key_manager",
        "//tink:aead",
        "//proto:aes_eax_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/subtle:aes_eax_boringssl",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_key_manager_test",
    size = "small",
    srcs = ["aes_gcm_key_manager_test.cc"],
    deps = [
        ":aes_gcm_key_manager",
        ":cord_aead",
        "//tink:aead",
        "//tink/aead/internal:cord_aes_gcm_boringssl",
        "//proto:aes_gcm_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/subtle:aes_gcm_boringssl",
        "//tink/util:istream_input_stream",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_siv_key_manager_test",
    size = "small",
    srcs = ["aes_gcm_siv_key_manager_test.cc"],
    deps = [
        ":aes_gcm_siv_key_manager",
        "//tink:aead",
        "//tink/internal:ssl_util",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/subtle:aes_gcm_siv_boringssl",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_ctr_hmac_aead_key_manager_test",
    size = "small",
    srcs = ["aes_ctr_hmac_aead_key_manager_test.cc"],
    deps = [
        ":aes_ctr_hmac_aead_key_manager",
        "//tink:aead",
        "//proto:aes_ctr_cc_proto",
        "//proto:aes_ctr_hmac_aead_cc_proto",
        "//proto:common_cc_proto",
        "//proto:hmac_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle",
        "//tink/subtle:aead_test_util",
        "//tink/subtle:aes_ctr_boringssl",
        "//tink/util:enums",
        "//tink/util:istream_input_stream",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "xchacha20_poly1305_key_manager_test",
    size = "small",
    srcs = ["xchacha20_poly1305_key_manager_test.cc"],
    deps = [
        ":xchacha20_poly1305_key_manager",
        "//tink:aead",
        "//tink/internal:ssl_util",
        "//proto:tink_cc_proto",
        "//proto:xchacha20_poly1305_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/subtle:xchacha20_poly1305_boringssl",
        "//tink/util:istream_input_stream",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "kms_aead_key_manager_test",
    size = "small",
    srcs = ["kms_aead_key_manager_test.cc"],
    deps = [
        ":kms_aead_key_manager",
        "//tink:aead",
        "//tink:kms_client",
        "//tink:kms_clients",
        "//proto:kms_aead_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "kms_envelope_aead_test",
    size = "small",
    srcs = ["kms_envelope_aead_test.cc"],
    deps = [
        ":aead_config",
        ":aead_key_templates",
        ":kms_envelope_aead",
        "//tink:aead",
        "//tink:keyset_handle",
        "//tink:registry",
        "//tink/internal:ssl_util",
        "//tink/mac:mac_key_templates",
        "//proto:aes_gcm_cc_proto",
        "//tink/util:fake_kms_client",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "kms_envelope_aead_key_manager_test",
    size = "small",
    srcs = ["kms_envelope_aead_key_manager_test.cc"],
    deps = [
        ":aead_config",
        ":aead_key_templates",
        ":aes_eax_key_manager",
        ":kms_envelope_aead",
        ":kms_envelope_aead_key_manager",
        "//tink:aead",
        "//tink:kms_client",
        "//tink:kms_clients",
        "//tink:registry",
        "//tink/mac:mac_key_templates",
        "//proto:kms_envelope_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aead_test_util",
        "//tink/util:fake_kms_client",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "cord_aead_wrapper_test",
    size = "small",
    srcs = ["cord_aead_wrapper_test.cc"],
    deps = [
        ":cord_aead",
        ":cord_aead_wrapper",
        "//tink:primitive_set",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
        "@com_google_absl//absl/strings:cord_test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "failing_aead_test",
    srcs = ["failing_aead_test.cc"],
    deps = [
        ":failing_aead",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_parameters_test",
    srcs = ["aes_gcm_parameters_test.cc"],
    deps = [
        ":aes_gcm_parameters",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_key_test",
    srcs = ["aes_gcm_key_test.cc"],
    deps = [
        ":aes_gcm_key",
        ":aes_gcm_parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_proto_serialization_test",
    size = "small",
    srcs = ["aes_gcm_proto_serialization_test.cc"],
    deps = [
        ":aes_gcm_key",
        ":aes_gcm_parameters",
        ":aes_gcm_proto_serialization",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//proto:aes_gcm_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:random",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_siv_parameters_test",
    srcs = ["aes_gcm_siv_parameters_test.cc"],
    deps = [
        ":aes_gcm_siv_parameters",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_siv_key_test",
    srcs = ["aes_gcm_siv_key_test.cc"],
    deps = [
        ":aes_gcm_siv_key",
        ":aes_gcm_siv_parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_gcm_siv_proto_serialization_test",
    size = "small",
    srcs = ["aes_gcm_siv_proto_serialization_test.cc"],
    deps = [
        ":aes_gcm_siv_parameters",
        ":aes_gcm_siv_proto_serialization",
        "//tink:parameters",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//proto:aes_gcm_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:random",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)
